--- a/package.json
+++ b/package.json
@@ -16,7 +16,9 @@
     "dotenv": "^16.4.7",
     "express": "^4.21.2",
     "jsdom": "^26.0.0",
-    "mongoose": "^8.12.1",
+    "json2csv": "^6.0.0-alpha.2",
+    "jsonwebtoken": "^9.0.2",
+    "mongoose": "^8.12.2",
     "multer": "^1.4.5-lts.2",
     "nodemon": "^3.1.9"
   }
